# sentinel-ai

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md  README.md  diagram.mermaid  package-lock.json  package.json
.github/workflows/: sentinel-check.yml
.husky/: pre-commit
client/: Dockerfile  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/(dashboard)/: layout.tsx
client/app/chat/: page.tsx
client/components/: header.tsx  stats-card.tsx
scripts/: package-lock.json  package.json
scripts/src/: full-test-sentinel.ts
sentinel-gateway/: package-lock.json  package.json
sentinel-gateway/src/: app.ts
sentinel-worker/: main.py  pyproject.toml  requirements.txt
sentinel-worker/src/: seed.py  worker.py
sentinel-worker/src/config/: env.py  logger.py  mongo.py  redis.py
sentinel-worker/src/database/: __init__.py  mongo_client.py  redis_client.py
sentinel-worker/src/engine/: __init__.py  classifier.py  embedder.py  embeddings.py  hydrator.py  ingestion.py  llm_handler.py  network.py  processor.py
sentinel-worker/src/services/ingest_worker/: hydrator.py  ingestion.py  main.py
sentinel-worker/src/services/query_worker/: main.py  processor.py
sentinel-worker/src/services/research_worker/: main.py  researcher.py
sentinel-worker/src/shared/: embedder.py  llm_handler.py  network.py
sentinel-worker/src/workers/: file_ingest.py  query.py
tests/: package-lock.json  package.json  tsconfig.json
tests/src/: full-test-standard.ts  mixed-load.ts  reliability.ts  stress-test.ts
(+26 files in other folders)
