[project]
name = "sentinel-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bullmq>=2.25.2",
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "redis>=6.4.0",
    "sentence-transformers>=5.4.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
